--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Jim+Nightshade&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilo_copia.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
