Modifiqué una clase del HTML, cambiándola de lugar

--- a/Index.html
+++ b/Index.html
@@ -28,14 +28,14 @@
             <a class="option" href="#section_5">Sobre el director</a>
             <a class="option" href="#section_6">Contacto</a>
         </nav>
-        <div id="primeraParte">
+        <div id="primeraParte" class="bg-pan-bl">
             <h1>EL LABERINTO DEL FAUNO</h1>
 
             <h2>EL LIBRO</h2>
         </div>
     </header>
 
-    <section id="general" class="bg-pan-bl">   
+    <section id="general">   
         <div>
             <img id="faun" src="Faun-min.png" alt="El Fauno y Ofelia">
         </div>
