Agregué el viewport para mobile

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,8 @@
     <link rel="canonical" href="http://www.ejemplo.com/versión-de-escritorio/página-de-ejemplo/" />
 
     <link rel="alternate" media="only screen and (max-width:640px)"  href="http://m.ejemplo.com/página-de-ejemplo/" />
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="Una landing page sobre el nuevo libro de Cornelia Funke, que adapta la película El Laberinto del Fauno, de Guillermo del Toro">
     <meta name="keywords" content="Cornelia, Funke, Guillermo, Del Toro, Libro, película, Laberinto, Fauno, novela">
